Passing data through claims journey

--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -30,7 +30,7 @@
           Total number of bovine animals
         </dt>
         <dd class="govuk-summary-list__value">
-          40
+          {{data['bovineAnimals']}}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> answer</span></a>
@@ -41,7 +41,7 @@
           County parish holding number
         </dt>
         <dd class="govuk-summary-list__value">
-          08/123/4567
+          {{data['accountNumber1']}}/{{data['accountNumber2']}}/{{data['accountNumber3']}}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> answer</span></a>
