--- a/app/views/fetf/application/v1-0/about-items/livestock-information.html
+++ b/app/views/fetf/application/v1-0/about-items/livestock-information.html
@@ -24,11 +24,11 @@
 
       <div class="govuk-form-group">
         <h2 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--m" for="account-number">
+          <label class="govuk-label govuk-label--m" for="bovine-animals">
             Total number of bovine animals
           </label>
         </h2>
-        <input class="govuk-input govuk-input--width-10" id="account-number" name="accountNumber" type="text" spellcheck="false" aria-describedby="account-number-hint" inputmode="numeric">
+        <input class="govuk-input govuk-input--width-10" id="bovine-animals" name="bovineAnimals" type="text" spellcheck="false" aria-describedby="account-number-hint" inputmode="numeric">
 <br><br><br>
         <h2 class="govuk-label-wrapper">
           <label class="govuk-label govuk-label--m" for="account-number">
@@ -38,7 +38,19 @@
         <div id="account-number-hint" class="govuk-hint">
           Enter the county parish holding (CPH) number where you record animal movements (for example 08/123/4567)
         </div>
-        <input class="govuk-input govuk-input--width-10" id="account-number" name="accountNumber" type="text" spellcheck="false" aria-describedby="account-number-hint" inputmode="numeric">
+        <div class="govuk-form-group">
+        
+          <input class="govuk-input govuk-input--width-2" id="account-number" name="accountNumber1" type="text">
+        / 
+       
+          
+          <input class="govuk-input govuk-input--width-3" id="account-number" name="accountNumber2" type="text">
+        /
+       
+          
+          <input class="govuk-input govuk-input--width-4" id="account-number" name="accountNumber3" type="text">
+        </div>
+
       </div>
 
 
