--- a/app/views/fetf/application/v1-0/business-details/business-structure.html
+++ b/app/views/fetf/application/v1-0/business-details/business-structure.html
@@ -34,19 +34,19 @@
             </div> -->
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="structure" name="structure" type="checkbox" value="landowner">
+                <input class="govuk-checkboxes__input" id="structure" name="structure" type="checkbox" value="Landowner">
                 <label class="govuk-label govuk-checkboxes__label" for="structure">
                   Landowner
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="structure-2" name="structure" type="checkbox" value="tenant">
+                <input class="govuk-checkboxes__input" id="structure-2" name="structure" type="checkbox" value="Tenant farmer">
                 <label class="govuk-label govuk-checkboxes__label" for="structure-2">
                   Tenant farmer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="structure-3" name="structure" type="checkbox" value="contractor">
+                <input class="govuk-checkboxes__input" id="structure-3" name="structure" type="checkbox" value="Contractor">
                 <label class="govuk-label govuk-checkboxes__label" for="structure-3">
                   Contractor
                 </label>
@@ -83,3 +83,5 @@
 </main>
 
 {% endblock %}
+
+
