--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -55,17 +55,28 @@
         
         
         
-        
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-visually-hidden">Warning</span>
+            You must not start the project. Committing to any costs (such as placing orders) before you receive a grant funding agreement will invalidate your application.
+          </strong>
+        </div>
+
+
         
         
         
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
-          The RPA aim to process complete applications within 60 working days.<br><br>
+          The RPA aims to process complete applications within 60 working days.<br><br>
           The RPA will be in touch when they have assessed your full application. They will tell you if your project scored well enough to receive grant funding.<br><br>The RPA will assess your application against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>If your application is successful, you’ll be sent a grant funding agreement and can begin work on the project.<br><br>
         </p>
 
-     
+       
+
+        
+       
 
 
           <h2 class="govuk-heading-m">Withdrawing your application</h2>
