--- a/app/views/fetf/claim/v1-0/submit.html
+++ b/app/views/fetf/claim/v1-0/submit.html
@@ -39,7 +39,7 @@
     <h2 class="govuk-heading-m">Declaration</h2>
 
 
-    <p class="govuk-body">I declare that:<br>
+    <p class="govuk-body">I confirm that:<br>
       <ul class="govuk-list govuk-list--bullet">
         <li>I have complied with and will continue to comply with my grant funding agreement.</li>
         <li>I have checked the information is correct and I accept full responsibility for it.</li>
