--- a/app/views/fetf/claim/v1-0/summary.html
+++ b/app/views/fetf/claim/v1-0/summary.html
@@ -27,7 +27,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Claim for a FETF Grant</span>
+    <span class="govuk-caption-xl">Submit claim</span>
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim evidence</h1>
     {% if (data['progress'] == "submitted") %}
     <span class="govuk-body">Evidence submitted as part of your claim.</span><br>
