--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -34,43 +34,43 @@
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme" name="assurance-scheme" type="checkbox" value="none">
+                <input class="govuk-checkboxes__input" id="assurance-scheme" name="assurance-scheme" type="checkbox" value="Not part of a farm assurance scheme">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme">
                   Not part of a farm assurance scheme
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-2" name="assurance-scheme" type="checkbox" value="tractor">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-2" name="assurance-scheme" type="checkbox" value="Red Tractor">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-2">
                   Red Tractor
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-3" name="assurance-scheme" type="checkbox" value="retailer">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-3" name="assurance-scheme" type="checkbox" value="Retailer scheme">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-3">
                   Retailer scheme
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-4" name="assurance-scheme" type="checkbox" value="rspca">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-4" name="assurance-scheme" type="checkbox" value="RSPCA Assured">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-4">
                   RSPCA Assured
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-5" name="assurance-scheme" type="checkbox" value="soil">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-5" name="assurance-scheme" type="checkbox" value="Soil Association">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-5">
                   Soil Association
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-6" name="assurance-scheme" type="checkbox" value="prefer">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-6" name="assurance-scheme" type="checkbox" value="Prefer not to say">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-6">
                   Prefer not to say
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="assurance-scheme-7" name="assurance-scheme" type="checkbox" value="other" data-aria-controls="conditional-contact-3">
+                <input class="govuk-checkboxes__input" id="assurance-scheme-7" name="assurance-scheme" type="checkbox" value="Other" data-aria-controls="conditional-contact-3">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-7">
                   Other
                 </label>
