--- a/app/views/fetf/claim/v1-0/email-submitted.html
+++ b/app/views/fetf/claim/v1-0/email-submitted.html
@@ -161,9 +161,7 @@
               <div class="govuk-details__text">
                 <strong>If you have questions about your claim</strong><br><br>
                 
-                If you have any questions about your claim or you cannot make the claim date, call
-the RPA and follow the options for the Farming Equipment and Technology Fund
-scheme.<br>
+                
   
 
               <p class="govuk-body">
@@ -184,7 +182,7 @@ scheme.<br>
        
             <strong>Withdrawing your claim</strong><br><br>
               
-            If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your claim.</a><br>
+            If you no longer want the grant funding, you can <a href="/_common/not-testing.html">withdraw your claim.</a><br>
             
 
 
