Added examples for claims upload

--- a/app/views/fetf/claim/v1-0/upload (test).html
+++ b/app/views/fetf/claim/v1-0/upload (test).html
@@ -1,17 +1,8 @@
-{% set grantTotal = 0 %}
-      {% set scoreTotal = 0 %}
-      {% for item in data['selected-items'] %}
-        {% set grantTotal = grantTotal + item.grantTotal %}
-        {% set scoreTotal = scoreTotal + item.score %}
-      {% endfor %}
-
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
   Upload evidence
 {% endblock %}
-
-
 
 {% block content %}
 
@@ -26,10 +17,7 @@
   </p>
 </div>
 
-{{ govukBackLink({
-  text: "Back",
-  href: "javascript:history.back()"
-}) }}
+<a href="#" class="govuk-back-link">Back</a>
 
 
 <br><br>
@@ -39,23 +27,19 @@
 
     <div class="govuk-grid-column-two-thirds">
       
-      <span class="govuk-caption-xl">Submit claim</span>
+      <span class="govuk-caption-xl">Claim for a FETF Grant</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
         Upload claim evidence
       </h1>
  
-    
+       <p class="govuk-body">Add evidence for each item.</p>
 
 
-      
+      <div class="govuk-inset-text">
+        The RPA aims to pay complete claims within 30 days.
+      </div>
+
  
-
-
-
-     
-
-
-
 
      
 
@@ -75,23 +59,14 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              {% for item in data['selected-items'] %}
-              <a class="govuk-link govuk-task-list__link" href="{{ item.termName | lower | replace(' ', '-') }}" aria-describedby="application-details-2-status">{{ item.termName }} (FETF{{ item.itemCode }})</a>
-             
+              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
                 Not yet started
               </strong>
           </div>
-          
           </li>
-          {% endfor %}
-
-
-
-         
-
 
           {% elif (data['01'] == "i") %}
 
@@ -329,29 +304,9 @@
       </ol>
 
 
-
-
-      
-      
-
- 
-
-
-
-
-
-
-
-      
-    
-
-
-
-
-
       <a href="summary">
         <button class="govuk-button">
-          Save and continue
+          Continue
         </button>
       </a>
 
