--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -1,16 +1,10 @@
-{% set grantTotal = 0 %}
-      {% set scoreTotal = 0 %}
-      {% for item in data['selected-items'] %}
-        {% set grantTotal = grantTotal + item.grantTotal %}
-        {% set scoreTotal = scoreTotal + item.score %}
-      {% endfor %}
+
 
 {% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
   Upload evidence
 {% endblock %}
-
 
 
 {% block content %}
@@ -53,23 +47,49 @@
                 {% for item in data['selected-items'] %}
                   {% set grantTotal = grantTotal + item.grantTotal %}
                   {% set scoreTotal = scoreTotal + item.score %}
+
+
+
+
+
+
+
+
+
+
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                   <div class="govuk-task-list__name-and-hint">
                     
-                    <a  id="linked-data" tabindex="-1" class="govuk-link govuk-task-list__link" href="/fetf/claim/v1-0/claim-item-detail.html" aria-describedby="before-you-start-1-status">
-                      {{ item.termName }}&nbsp;(FETF{{ item.itemCode }})
+                    <a  id="linked-data" tabindex="-1" class="govuk-link govuk-task-list__link" href="/fetf/claim/v1-0/{{ item.termName | lower | replace(' ', '-') }}" aria-describedby="before-you-start-1-status">
+                      {{ item.title }}&nbsp;(FETF{{ item.itemCode }})
                     </a>
-
-
-
-                   
-
-
                   </div>
+
+                  {% if (data['01'] == "n") %}
+
+
+                  <div class="govuk-task-list__status" id="application-details-4-status">
+                    <strong class="govuk-tag govuk-tag--blue">
+                      Not yet started
+                    </strong>
+                </div>
+
+                {% elif (data['01'] == "i") %}
+
+                <div class="govuk-task-list__status" id="application-details-4-status">
+                  <strong class="govuk-tag govuk-tag--light-blue">
+                    In progress
+                  </strong>
+              </div>
+              {% elif (data['01'] == "c") %}
+
+
                   <div class="govuk-task-list__status" id="before-you-start-1-status">
                     Completed
                   </div>
                 </li>
+
+                {% endif %}
                 {% endfor %}
                 
               </ul>
