--- a/app/views/fetf/_includes/body-content_claim-detail-main-block.html
+++ b/app/views/fetf/_includes/body-content_claim-detail-main-block.html
@@ -26,7 +26,7 @@
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Item(s)</th>
+      <th scope="col" class="govuk-table__header">Items</th>
       <th scope="col" class="govuk-table__header">Code</th>
       <th scope="col" class="govuk-table__header govuk-table__header--numeric">Quantity</th>
       <th scope="col" class="govuk-table__header govuk-table__header--numeric">Grant amount</th>
