--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -32,7 +32,7 @@
 
     <div class="govuk-grid-column-two-thirds">
       
-      <span class="govuk-caption-xl">Claim for a FETF Grant</span>
+      <span class="govuk-caption-xl">Submit claim</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
         Upload claim evidence
       </h1>
