Consistency review iteration

--- a/app/views/fetf/claim/v1-0/claim-detail.html
+++ b/app/views/fetf/claim/v1-0/claim-detail.html
@@ -22,7 +22,7 @@ Check claim details
         <form method="post" action="/fetf/claim/v1-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02b">
 
         <span class="govuk-caption-xl">Submit claim</span>
-        <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check claim details</h1>
+        <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check approved grant funding</h1>
 
         {% include "../../_includes/body-content_claim-detail-main-block.html" %}
         
