--- a/app/views/fetf/_includes/body-content_terms-and-conditions-main-block.html
+++ b/app/views/fetf/_includes/body-content_terms-and-conditions-main-block.html
@@ -1,4 +1,4 @@
-<p class="govuk-body-l">Your grant funding agreement is bound by our general terms and conditions for all Farming Equipment and Technology Fund (FETF) grants.</p>
+<p class="govuk-body-l">Your grant funding agreement is bound by our general terms and conditions for all Farming Equipment and Technology Fund grants.</p>
 
-<p class="govuk-body">To accept this agreement you must have read and agreed to these terms and conditions.</p>
-<p class="govuk-body">Read the full <a href="https://www.gov.uk/government/publications/farming-equipment-and-technology-fund-fetf-2023/annex-2-terms-and-conditions" target="_blank"> terms and conditions (opens in new tab)</a></p>
+<p class="govuk-body">To accept this agreement you must read and agree to these terms and conditions.</p>
+<p class="govuk-body">Read the full <a href="https://www.gov.uk/government/publications/farming-equipment-and-technology-fund-2024/terms-and-conditions-farming-equipment-and-technology-fund-fetf-2024" target="_blank"> terms and conditions (opens in new tab)</a></p>
