--- a/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
+++ b/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
@@ -43,11 +43,16 @@ Review terms and conditions
           </fieldset>
         </div>
 
+       
           {{govukButton({
               text: "Save and continue"
           })}}
         
         </form>
+
+        <h2 class="govuk-heading-m">Withdrawing your agreement</h2>
+        <p class="govuk-body">If you do not want to accept your agreement, you should <a href="">withdraw your application</a>.</p>
+        
 
 
       </div>
