--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -67,6 +67,8 @@
 
                   {% if (data['01'] == "n") %}
 
+                  <!-- Change item.itemCode back to data['test'] -->
+
 
                   <div class="govuk-task-list__status" id="application-details-4-status">
                     <strong class="govuk-tag govuk-tag--blue">
