--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -46,7 +46,7 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                   <div class="govuk-task-list__name-and-hint">
                     
-                    <a  id="linked-data" tabindex="-1" class="govuk-link govuk-task-list__link" href="/fetf/claim/v1-0/{{ item.termName | lower | replace(' ', '-') }}" aria-describedby="before-you-start-1-status">
+                    <a  id="linked-data" tabindex="-1" class="govuk-link govuk-task-list__link" href="/fetf/claim/v1-0/{{ item.termName | lower | replace(' ', '-') }}2" aria-describedby="before-you-start-1-status">
                       {{ item.title }}&nbsp;(FETF{{ item.itemCode }})
                     </a>
                   </div>
